fixed the search_box background problem. could not fix the background image problem on mobile version-will work on that tomorrow

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,4 @@
-.banner {
+.banner-content {
   color: white;
   height: 100vh;
   background-size: cover !important;
@@ -12,13 +12,13 @@
   position: absolute;
 }
 
-.banner h2 {
+.banner-content h2 {
   text-align: center;
   margin-top: 120px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
-.banner p {
+.banner-content p {
   text-align: center;
   font-size: 18px;
   font-weight: 400;
